# bevy_parkour

./: Cargo.toml
.cargo/: config.toml
src/: camera.rs  exit.rs  main.rs  player.rs  scene.rs
src/player/: camera.rs  input.rs  movement.rs  state_machine.rs  visuals.rs
