[package]
name = "parkour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*", features = ["dynamic_linking"]}
bevy_editor_pls = "0.4.0"
bevy_rapier3d = { version = "*", features = ["debug-render-3d"] }
leafwing-input-manager = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
